# pvr.waipu

./: .clang-format  .travis.yml  CMakeLists.txt  FindRapidJSON.cmake  README.md  appveyor.yml  azure-pipelines.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  changelog-and-release.yml  increment-version.yml  release.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  kodi-pvr-waipu.install  rules
depends/common/rapidjson/: 0002-fix-win-uwp-arm64.patch  flags.txt  rapidjson.sha256
pvr.waipu/: addon.xml.in
pvr.waipu/resources/: check_requirements.py  eit_categories.txt  hls_allowlist.txt  settings.xml
pvr.waipu/resources/language/resource.language.af_za/: strings.po
pvr.waipu/resources/language/resource.language.am_et/: strings.po
pvr.waipu/resources/language/resource.language.ar_sa/: strings.po
pvr.waipu/resources/language/resource.language.ast_es/: strings.po
pvr.waipu/resources/language/resource.language.az_az/: strings.po
pvr.waipu/resources/language/resource.language.be_by/: strings.po
pvr.waipu/resources/language/resource.language.bg_bg/: strings.po
pvr.waipu/resources/language/resource.language.bs_ba/: strings.po
pvr.waipu/resources/language/resource.language.ca_es/: strings.po
pvr.waipu/resources/language/resource.language.cs_cz/: strings.po
pvr.waipu/resources/language/resource.language.cy_gb/: strings.po
pvr.waipu/resources/language/resource.language.da_dk/: strings.po
pvr.waipu/resources/language/resource.language.de_de/: strings.po
pvr.waipu/resources/language/resource.language.el_gr/: strings.po
pvr.waipu/resources/language/resource.language.en_au/: strings.po
pvr.waipu/resources/language/resource.language.en_gb/: strings.po
pvr.waipu/resources/language/resource.language.en_nz/: strings.po
pvr.waipu/resources/language/resource.language.en_us/: strings.po
pvr.waipu/resources/language/resource.language.eo/: strings.po
pvr.waipu/resources/language/resource.language.es_ar/: strings.po
pvr.waipu/resources/language/resource.language.es_es/: strings.po
pvr.waipu/resources/language/resource.language.es_mx/: strings.po
pvr.waipu/resources/language/resource.language.et_ee/: strings.po
pvr.waipu/resources/language/resource.language.eu_es/: strings.po
pvr.waipu/resources/language/resource.language.fa_af/: strings.po
pvr.waipu/resources/language/resource.language.fa_ir/: strings.po
pvr.waipu/resources/language/resource.language.fi_fi/: strings.po
pvr.waipu/resources/language/resource.language.fo_fo/: strings.po
pvr.waipu/resources/language/resource.language.fr_ca/: strings.po
pvr.waipu/resources/language/resource.language.fr_fr/: strings.po
pvr.waipu/resources/language/resource.language.gl_es/: strings.po
pvr.waipu/resources/language/resource.language.he_il/: strings.po
pvr.waipu/resources/language/resource.language.hi_in/: strings.po
src/: Base64.cpp  Base64.h  Curl.cpp  Curl.h  HLSAllowlist.cpp  HLSAllowlist.h  JWT.cpp  JWT.h  Utils.cpp  Utils.h  WaipuData.cpp  WaipuData.h  categories.cpp  categories.h  client.cpp  client.h
(+42 files in other folders)
